improves table messaging, adds avatar image, clean up ui
